--- a/src/css/addtional.css
+++ b/src/css/addtional.css
@@ -5,22 +5,28 @@
   height: 100%;
   background: none;
   padding-top: 50px;
-  transition: 0.3s;
+  transition: 0.75s;
   z-index: 900;
   position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding-left: 30px;
+  padding-left: 18px;
 }
+
 .side-menu a {
   padding: 15px;
-  color: white;
+  color: rgb(255, 255, 237);
   text-decoration: none;
-  font-size: 2em;
-  transition: 0.3s;
+  font-size: 2.5em;
+  transition: 0.3;
   font-weight: 700;
+}
+.menu {
+  font-size: 3em;
+  font-weight: 800;
+  transform: translate(10px, -70px);
 }
 
 .side-menu a:hover {
@@ -31,14 +37,17 @@
   opacity: 0.75;
 }
 
-.menu-button {
+.menu-button,
+.men {
   top: 50%;
-  left: 0px;
+  left: 5px;
   position: fixed;
   font-size: 3em;
   z-index: 10; /* Ensure it is above other elements */
-  transition: 0.3s;
+  transition: 0.75s;
   animation: pulse 1.5s ease-in 0.1s infinite;
+  display: flex;
+  flex-direction: row;
 }
 
 @keyframes pulse {
@@ -51,4 +60,79 @@
   to {
     transform: scale(1);
   }
+}
+#about {
+  display: flex;
+  flex-direction: row;
+  transition: 1s;
+}
+.skills {
+  opacity: 0.85;
+  font-weight: 600;
+}
+.more {
+  display: flex;
+  font-size: 5em;
+  justify-content: flex-start;
+  align-items: center;
+  z-index: 900;
+  animation: bounce 1.5s ease-in infinite;
+}
+@keyframes bounce {
+  from {
+    transform: translateX(-60px);
+    color: black;
+  }
+  50% {
+    transform: translate(-70px);
+    color: white;
+  }
+  to {
+    transform: translate(-60px);
+    color: black;
+  }
+}
+.detailed {
+  top: 0;
+  right: -500px;
+  width: 500px;
+  height: 100%;
+  background: none;
+  padding-top: 50px;
+  transition: 1s;
+  z-index: 100;
+  position: fixed;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 18px;
+  font-size: 18px;
+  line-height: 2;
+
+  font-family: monospace;
+}
+img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+#python {
+  width: 80px;
+  height: 80px;
+}
+#html-icon,
+#css-icon,
+#c {
+  width: 60px;
+  height: 60px;
+}
+.lan {
+  font-size: 25px;
+  font-family: monospace;
+  font-weight: 800;
+}
+.languages {
+  display: flex;
+  flex-direction: row;
 }
