--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #231f1f;
+  background-color: #262222;
   color: #d2d2e0;
   position: relative;
   left: 0px; /* Start at normal position */
-  transition: left 0.3s ease;
+  transition: left 0.75s ease-in-out;
   overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -23,7 +23,36 @@ body {
   width: 50%;
   height: 600px;
 }
-.text {
+.left1 {
+  width: 10%;
+  height: 600px;
+}
+.right1 {
+  width: 90%;
+  height: 600px;
+  margin-right: 20px;
+  background-color: rgb(154, 127, 16);
+  color: white;
+  font-size: 1.5em;
+  font-weight: 600;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 50px;
+}
+.name {
+  font-size: 2.5em;
+}
+.right1 .title,
+.right1 .skills {
+  font-size: 1em; /* Keep the other text the same size */
+  line-height: 1.5; /* Add spacing between lines */
+}
+
+.text,
+.text1 {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: center;
@@ -34,6 +63,10 @@ body {
   position: relative;
   color: rgb(163, 163, 163);
   line-height: 0.85;
+}
+.text1 {
+  transform: translate(300px, 30px);
+  color: white;
 }
 @media (max-width: 500px) {
   .welcome {
@@ -49,4 +82,8 @@ header {
   font-weight: 700;
   font-family: Arial, Helvetica, sans-serif;
   margin-left: 45px;
+}
+.menu {
+  transform: rotate(-90deg);
+  font-size: 16px;
 }
