--- a/src/css/addtional.css
+++ b/src/css/addtional.css
@@ -93,7 +93,7 @@
   }
 }
 .detailed {
-  top: 0;
+  top: 30px;
   right: -500px;
   width: 500px;
   height: 100%;
@@ -108,8 +108,9 @@
   flex-direction: column;
   padding-left: 18px;
   font-size: 18px;
-  line-height: 2;
-
+  opacity: 0;
+  line-height: 1.5;
+  max-height: 250px; /* Set this to the height you want */
   font-family: monospace;
 }
 img {
