--- a/src/css/addtional.css
+++ b/src/css/addtional.css
@@ -113,6 +113,8 @@
   max-height: 250px; /* Set this to the height you want */
   font-family: monospace;
 }
+@media (max-width: 500px) {
+}
 img {
   width: 50px;
   height: 50px;
