--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -85,6 +85,9 @@ body {
   .text {
     transform: translateY(-350px);
   }
+  .text1 {
+    transform: translate(100px, 30px);
+  }
 }
 header {
   margin-bottom: 10px;
@@ -128,7 +131,7 @@ header {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 0.8;
   top: 500px;
-  transform: translate(950px, -200px);
+  transform: translate(950px, -350px);
 }
 .rotate {
   transform: rotate(-270deg);
@@ -149,7 +152,7 @@ footer {
 .slider-container {
   margin-top: 50px;
   height: auto;
-  width: 50%;
+  width: 75%;
   border: 10px solid white;
   border-radius: 5px;
   overflow: hidden; /* Ensure only one image is visible at a time */
@@ -202,55 +205,6 @@ footer {
   100% {
     transform: translateX(0%);
   }
-}
-
-.slide {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  flex-shrink: 0;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); /* Dark overlay */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.overlay .link {
-  color: white;
-  font-size: 1.5em;
-  margin: 0 10px;
-  text-decoration: none;
-  border: 2px solid white;
-  padding: 10px 20px;
-  transition:
-    background-color 0.3s ease,
-    border-color 0.3s ease;
-}
-
-.overlay .link:hover {
-  background-color: white;
-  color: black;
-  border-color: black;
-}
-
-.slide:hover .overlay {
-  opacity: 1;
 }
 
 /* Media query for mobile devices */
