--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -131,7 +131,7 @@ header {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 0.8;
   top: 500px;
-  transform: translate(950px, -350px);
+  transform: translate(1250px, -500px);
 }
 
 .rotate {
@@ -151,7 +151,7 @@ footer {
   align-items: center;
 }
 .slider-container {
-  width: 100%;
+  width: max-content;
   height: auto;
   border: 10px solid white;
   border-radius: 5px;
@@ -182,11 +182,15 @@ footer {
   }
   .container {
     background: none;
+    width: 100%;
+    height: 500px;
   }
 
   .slider-container {
     top: 150px;
-    width: 100%;
+    width: max-content;
+    min-width: 300px;
+    left: -40px;
     max-width: none; /* Allow full width on smaller screens */
     height: auto;
   }
@@ -197,7 +201,7 @@ footer {
   }
 
   .balance .rotate {
-    font-size: 40px; /* Adjust text size for better readability on small screens */
+    font-size: 1em; /* Adjust text size for better readability on small screens */
   }
 }
 @media (max-width: 500px) {
@@ -207,8 +211,9 @@ footer {
     font-weight: 800;
     line-height: 0.8;
     top: 500px;
-    transform: translate(0, -150px);
+    transform: translate(-40px, -175px);
     font-size: 50px;
+    position: static;
   }
   .rotate {
     font-size: 4em;
